# PokerInC

./: CMakeLists.txt  main.c  test_input.txt
tests/: tests-mine.c  tests-nanecisto.c
